# cpp-template

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: hasib.cpp.9C8191F75BDF9C65.idx  hasib.h.3E0C6CAD3E556444.idx  main.cpp.C5D9DB4E585C91AC.idx
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cpp
